<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_wave"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".RegisterActivity">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.017"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            android:onClick="toLogin"/>

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_back"
            android:text="@string/register"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semibold"/>

        <TextView
            android:id="@+id/textview_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_title"
            android:text="@string/register_description"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/montserrat_regular"/>

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_description"
            android:ems="10"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/custom_user_icon"
            android:drawableTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_username"
            android:ems="10"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/custom_padlock_icon"
            android:drawableTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edittext_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password"
            android:ems="10"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/custom_padlock_icon"
            android:drawableTint="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_login"
            android:background="@drawable/custom_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password_repeat"
            android:text="@string/register"
            android:onClick="register"/>

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="0dp"-->
<!--            android:padding="0dp"-->
<!--            android:src="@drawable/ic_wave"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/button_login" />-->

</androidx.constraintlayout.widget.ConstraintLayout>